; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/ai03/orbit/extr_orbit.c_set_layer_indicators.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/ai03/orbit/extr_orbit.c_set_layer_indicators.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_layer_indicators(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %24 [
    i32 0, label %4
    i32 1, label %8
    i32 2, label %12
    i32 3, label %16
    i32 4, label %20
  ]

4:                                                ; preds = %1
  %5 = call i32 @led_toggle(i32 0, i32 1)
  %6 = call i32 @led_toggle(i32 1, i32 0)
  %7 = call i32 @led_toggle(i32 2, i32 0)
  br label %28

8:                                                ; preds = %1
  %9 = call i32 @led_toggle(i32 0, i32 1)
  %10 = call i32 @led_toggle(i32 1, i32 1)
  %11 = call i32 @led_toggle(i32 2, i32 0)
  br label %28

12:                                               ; preds = %1
  %13 = call i32 @led_toggle(i32 0, i32 1)
  %14 = call i32 @led_toggle(i32 1, i32 1)
  %15 = call i32 @led_toggle(i32 2, i32 1)
  br label %28

16:                                               ; preds = %1
  %17 = call i32 @led_toggle(i32 0, i32 0)
  %18 = call i32 @led_toggle(i32 1, i32 1)
  %19 = call i32 @led_toggle(i32 2, i32 1)
  br label %28

20:                                               ; preds = %1
  %21 = call i32 @led_toggle(i32 0, i32 0)
  %22 = call i32 @led_toggle(i32 1, i32 0)
  %23 = call i32 @led_toggle(i32 2, i32 1)
  br label %28

24:                                               ; preds = %1
  %25 = call i32 @led_toggle(i32 0, i32 1)
  %26 = call i32 @led_toggle(i32 1, i32 0)
  %27 = call i32 @led_toggle(i32 2, i32 1)
  br label %28

28:                                               ; preds = %24, %20, %16, %12, %8, %4
  ret void
}

declare dso_local i32 @led_toggle(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
